<resources>
    <string name="app_name">PLET</string>
    <string name="or"> OR</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="login_activity_name">PLET Login Page</string>
    <string name="register_activity_name">PLET Register Page</string>
    <string name="prompt_owner">Owner</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_user">Alias</string>
    <string name="prompt_baby_age">Child Age</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="btnRegister">Register</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="select_toy_address">Search Toy WI-FI hotspot</string>
    <string name="add_baby">Add child</string>
    <string name="remove_baby">Remove/Modify child</string>
    <string name="modify_baby">Modify child</string>
    <string name="continueApp">SELECT TOY</string>
    <string name="select_a_baby">Select child</string>
    <string name="country">COUNTRY</string>
    <string name="gender_male">MALE</string>
    <string name="gender_female">FEMALE</string>
</resources>

