<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <ImageView
        android:layout_width="370dp"
        android:layout_height="132dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo1"
        tools:ignore="ContentDescription" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/selectBaby"
        android:layout_width="311dp"
        android:layout_height="33dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_a_baby"
        android:textSize="25sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="10dp"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Spinner
                android:id="@+id/spinnerBaby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/addBaby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="navigateAddBaby"
                android:text="@string/add_baby" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/goFwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/continueApp" />
            <Button
                android:id="@+id/quit_app"
                style="?android:textAppearanceSmall"
                android:layout_width="100pt"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20pt"
                android:layout_marginTop="20dp"
                android:text="Quit App"
                android:onClick="quitApp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
        </TableRow>

    </TableLayout>

</LinearLayout>