<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   >


    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/spinnerTitle"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Choose or modify child"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="295dp"
        android:layout_height="169dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo1"
        tools:ignore="ContentDescription" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/myTitle"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Select child from list"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30dp"
        tools:paddingBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:paddingBottom="10dp">

        <Spinner
            android:id="@+id/spinnerBaby"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:background="@android:drawable/btn_dropdown"
            android:popupBackground="@android:color/holo_blue_bright" />

        <Button
            android:id="@+id/removeBaby"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="navigateRemoveBaby"
            android:text="@string/remove_baby" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

       <!-- tools:paddingBottom="10dp"-->

        <Button
            android:id="@+id/delete_user"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"
              android:onClick="deleteUser"
            android:text="Delete user"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addBaby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="navigateAddBaby"
            android:text="@string/add_baby" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/goFwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/continueApp" />

        <Button
            android:id="@+id/quit_app"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="backtoLogin"
            android:text="BACK"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>