<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
   >

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/myTitle"
        android:layout_width="fill_parent"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="Change your data"
        android:textSize="30dp"
        android:textColor="@android:color/holo_blue_dark" />

    <ImageView
        android:layout_width="332dp"
        android:layout_height="103dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo1"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="* Please use your email as user Name"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="* Name"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/owner_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="* Surname"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/owner_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="*                       DD-MM-YYYY Birthday"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!--android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/owner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Gender"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout-->

            <!--Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:drawable/btn_dropdown">
            </Spinner-->

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*GENDER: "
                    />
                <RadioButton android:id="@+id/radio_gender_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_gender_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <Spinner
                android:id="@+id/spinnerCountry"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:drawable/btn_dropdown">
            </Spinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/owner_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="*City"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <!--android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout-->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/owner_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone number"
                    android:imeActionId="6"
                    android:imeActionLabel="Sign in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="*Enter password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="*Re-Enter password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:onClick="updateUser"
                    android:background="@drawable/button_rounded_corners"
                    android:text="  Confirm  "
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:clickable="true" />

                <Button
                    android:id="@+id/exit_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/button_rounded_corners"
                    android:onClick="navigatetoAddChild"
                    android:text="  child data  "
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>